# sam2pseudo

./: CMakeLists.txt  LICENSE  README.md
config/: CMakeLists-bxzstr.txt.in
include/: minimap2pseudo.hpp
src/: minimap2pseudo.cpp  minimap2pseudo_exec.cpp  sam2pseudo.cpp
